# JJVM

./: .gitignore  CMakeLists.txt  README.md  jjvm.hpp  jjvm_handlers.cpp  main.cpp  memory.hpp
cmake/: subdirs.cmake
include/: AccessFlag.hpp  Allocator.hpp  CallSite.hpp  ClassFile.hpp  ClassSpace.hpp  ConstantPoolTypes.hpp  FieldTypes.hpp  FileReader.hpp  GC.hpp  Heap.hpp  Internal.hpp  Interpreter.hpp  JJVM.hpp  JavaClass.hpp  JavaFrame.hpp  JavaHeap.hpp  JavaType.hpp  MethodResolve.hpp  NativeMethod.hpp  Option.hpp  RuntimeEnv.hpp  SymbolicRef.hpp  Utils.hpp  instructions.hpp  jjvm.hpp  memory.hpp
javaclass/: Arr.java  Benchmark.java  Fib.java  Int.java  Middle.java  QuickSort.java
javaclass/lang/: IO.java
prev/: jjvm_class_parser.cpp  jjvm_handlers.cpp
src/: CallSite.cpp  ClassFile.cpp  ClassSpace.cpp  GC.cpp  Interpreter.cpp  JavaClass.cpp  JavaFrame.cpp  JavaHeap.cpp  MethodResolve.cpp  NativeMethod.cpp  RuntimeEnv.cpp  SymbolicRef.cpp  Utils.cpp  instractions.cpp  jjvm.cpp  jjvm_class_parser.cpp  jjvm_handlers.cpp  main.cpp  memory.cpp
tests/: Fib.java  Middle.java  benchmark3.java
